--- a/page_view.html
+++ b/page_view.html
@@ -28,6 +28,8 @@
 	
 	<!-- Page Style Assets --> 
 	<link rel="stylesheet" href="assets/css/base.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="assets/css/page.css" media="screen" type="text/css" />
+
 	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	
 	<!--[if IE 7]><link rel="stylesheet" href="assets/css/ie_fix.css" media="screen" type="text/css" /><![endif]-->
@@ -41,8 +43,8 @@
 <body class="dark">	
 	<div id="header" class="">
 		<div id="header-bar"> 
-			<h1 id="title"><img src="throwaway/patrickskim.jpeg" /> Jillian Glacaeunon</h1>
-
+			<h1 id="title"><img src="throwaway/patrickskim.jpeg" /> Patrick S  Kim</h1>
+<!--
 			<ul id="nav" class="clearfix">
 				<li id="nav-about" class="active"><a href="">About Us</a></li>
 				<li id="nav-gallery"><a href="">Gallery</a></li>
@@ -53,17 +55,32 @@
 
 	<div id="container" class="">
 
-		<div id="">
+		<div id="sidebar">
 			<ul>
-				<li>
-					
-					<div class="">
-						<h4>Brian Battjer</h4>
-						<p>Product manager</p>
-						<img src="throwaway/fb-2.jpg" />
+				<li class="collab">	
+					<div class="quote">
+						I made wireframes and did things that made it work.
+					</div>			
+					<div class="user">
+						<h4 class="name">Brian Battjer</h4>
+						<p class="skill">Product manager</p>
+						<img src="throwaway/fb-2.jpg" class="thumb" />
+					</div>
+				</li>
+
+				<li class="collab">	
+							
+					<div class="user">
+						<h4 class="name">Sanju Varma</h4>
+						<p class="skill">Product manager</p>
+						<img src="throwaway/fb-3.jpg" class="thumb" width="25" />
 					</div>
 				</li>
 			</ul>
+		</div>
+
+		<div id="stage">
+			<img src="gallery/2.jpg" />
 		</div>
 
 
